# simple-scm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: requirements.md  usage.md
src/: about.h  base_module.cpp  base_module.h  init-db.cpp  main.cpp  model_commit.cpp  model_new_branch.cpp  module_add.cpp  module_add.h  module_checkout.cpp  module_checkout.h  module_commit.cpp  module_commit.h  module_detect_changes.cpp  module_detect_changes.h  module_edit.cpp  module_edit.h  module_ignore.cpp  module_ignore.h  module_list.cpp  module_list.h  module_merge.cpp  module_merge.h  module_new_branch.cpp  module_new_branch.h  module_reset.cpp  module_reset.h  notification.h  update.h
src/Database/: Compress.cpp  Compress.h  database.cpp  database.h  file_system.cpp  file_system.h  init-db.cpp  init-db.h  model_commit.cpp  model_commit.h  model_detect_changes.cpp  model_detect_changes.h  model_list.cpp  model_list.h  model_new_branch.cpp  model_new_branch.h
src/PythonFiles/: update.py
src/Test/: test.cpp  test.h  test_add.cpp  test_add.h  test_checkout.cpp  test_checkout.h  test_commit.cpp  test_commit.h  test_compress.cpp  test_compress.h  test_database.cpp  test_database.h  test_file_system.cpp  test_file_system.h  test_merge.cpp  test_merge.h  test_reset.cpp  test_reset.h
src/headers/: cache.h  global.h  init-db.h
src/libs/bundle/: bundle.h
src/migrate/: migrate.cpp  migrate.h
